--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,39 +1,54 @@
 ---
 import Header from '../components/Header.astro';
+import FloatingButton from '../components/utils/FloatingButton.astro';
 interface Props {
 	title: string;
+	description: string
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="icon" href="/public/logo.ico" />
+
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta name="lenguage" content="es" />
+
+		<meta name="keywords" content="Nómades, Patagonia, Turismo, viajes, Hoteles, Animales" />
+
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<title>{title}</title>
+		<meta name="description" content="Realiaza turismo por todo chubut con Nómades - Patagonia" />
+
+		<meta property="og:image" content="../imgs/20240623_170703 2.png" />
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={description} />
+		<meta property="og:url" content="URL A COMPLETAR"/>
+		<meta property="og:site_name" content="Nómades - Patagonia" />
+		<meta property="locale" content="es_ES" />
+
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:site" content="@Nómades"/>
+		<meta property="twitter:creator" content="@Nómades">
+		<meta property="twitter:title" content={title} />
+		<meta property="twitter:description" content={description} />
+		<meta property="twitter:image" content="../imgs/20240623_170703 2.png" />
+
+		<meta name="robots" content="index, follow">
+		<meta name="googlebot" content="index, follow"/>
 	</head>
 	<body>
 		<Header/>
+		<FloatingButton/>
 		<slot />
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
 	html {
 		font-family: system-ui, sans-serif;
 		background: #13151a;
