--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,10 @@ import Separator from '../components/Separator.astro';
 import ElectionInformationSection from '../components/sections/ElectionInformationSection.astro';
 import ContactSection from '../components/sections/ContactSection.astro';
 import BenefitsSections from '../components/sections/BenefitsSections.astro';
+import QuestionSection from '../components/sections/QuestionSection.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Nómades - Patagonia" description="Realiaza turismo por todo chubut con Nómades - Patagonia">
 	<main>
 		<SectionWelcome/>
 		<SectionAbout/>
@@ -17,6 +18,7 @@ import BenefitsSections from '../components/sections/BenefitsSections.astro';
 		<ElectionInformationSection/>
 		<ContactSection/>
 		<BenefitsSections/>
+		<QuestionSection/>
 	</main>
 	<Footer/>
 </Layout>
